# Algorithm_sorting_simulator

./: CMakeLists.txt
algorithm/: CMakeLists.txt  Creator.cpp  Creator.h  Data_generator.cpp  Data_generator.h  NW_FCFS.cpp  NW_FCFS.h  NW_SJF.cpp  NW_SJF.h  P_FCFS.cpp  P_FCFS.h  P_SJF_NW.cpp  P_SJF_NW.h  P_SJF_W.cpp  P_SJF_W.h  Process.h  Process_S.h  W_SJF.cpp  W_SJF.h  main.cpp  timeArrival.txt  timeExecution.txt
algorithm/Results/: collectiveResult.txt  timeArrivalResult.txt  timeEndResult.txt  timeExecutionResult.txt
pages/: CMakeLists.txt  CreatorP.cpp  CreatorP.h  Data_generator.cpp  Data_generator.h  FIFOfo.cpp  FIFOfo.h  LRUfo.cpp  LRUfo.h  Page.h  Page_P.h  S_FIFO.cpp  S_FIFO.h  S_LRU.cpp  S_LRU.h  main.cpp  result.txt
